# Road_Crack_Detection_-EdgeClassification-

./: BOW_Slic.rtf  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  blah.sh  cmake_install.cmake  features.txt  image_filenames.txt  kmeans.txt  svm_run_script_testing.sh  svm_run_script_training.sh  test.sh  test_bow_slic
include/: bow_slic.hpp  debugging_functions.hpp  oversegmentation.hpp
libsvm-3.20/: featureModel  featureModel_good_road_cloudy  features.txt  output_svm.txt  street_image  svm-predict  svm-train  test_file_2  test_file_3  test_file_4  test_file_5  train_file_3_negative  train_file_image_2_positive
src/: .oversegmentation.cpp.swp  bow_slic.cpp  debugging_functions.cpp  oversegmentation.cpp  test_bow_slic.cpp
